--- a/supervisord.conf
+++ b/supervisord.conf
@@ -22,7 +22,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:nginx]
-command=/usr/sbin/nginx
+command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
 autorestart=true
 priority=10
